--- a/app-chart.html
+++ b/app-chart.html
@@ -6,21 +6,22 @@ Element for creating charts
 
 ##### Example
 
-    <app-chart type="Line"></app-chart>
+    <app-chart type="line"></app-chart>
 
 @element app-chart
 @blurb Element for creating charts
 @status alpha
-@homepage http://ChrisMcKenzie.github.io/app-chart
+@homepage http://the-control-group.github.io/app-chart
 -->
-<polymer-element name="app-chart" attributes="xaxis type data width height details legend shelf">
+<polymer-element name="app-chart" attributes="type repsonsive">
 
   <template>
     <link rel="stylesheet" href="app-chart.css" />
     <link type="text/css" rel="stylesheet" href="../rickshaw/src/css/graph.css">
     <link type="text/css" rel="stylesheet" href="../rickshaw/src/css/detail.css">
     <link type="text/css" rel="stylesheet" href="../rickshaw/src/css/legend.css">
-    <content id="items" select="data"></content>
+    <content id="series" select="app-chart-series"></content>
+
 
     <div id="chart_container">
       <div id="y_axis"></div>
@@ -43,201 +44,204 @@ Element for creating charts
 
     Polymer('app-chart', {
       /**
-       * The `type` defines what type of chart we are building
+       * type of renderer for the chart
+       *
+       *  __renderers available__
+       *  - stack
+       *  - line
+       *  - scatterplot
        *
        * @attribute type
-       * @type string
+       * @type String
+       * @default ''
        */
-      type: 'line',
 
-      /**
-       * The `responsive` attribute tells the element whether or not to
-       * resize to fit screen
-       *
-       * @attribute context
-       * @type CanvasRenderingContext2D
-       */
-      responsive: {
-        value: false,
-        reflect: true
+      publish: {
+        /**
+         * this chart should be responsive to window size
+         *
+         * @attribute responsive
+         * @type Boolean
+         * @default ''
+         */
+        responsive: {
+          value: false,
+          reflect: true
+        },
+        /**
+         * the chart series data
+         *
+         * @attribute series
+         * @type Array
+         * @default []
+         */
+        series:  [],
       },
 
-      /**
-       * The `context` attribute defines a canvas context for the
-       * charting system to render to.
-       *
-       * @attribute context
-       * @type CanvasRenderingContext2D
-       */
-      context: null,
-
-      /**
-       * The `labels` defines the labels for the datasets
-       *
-       * @attribute labels
-       * @type array
-       */
-      context: null,
-
-      /**
-       * The `data` attribute defines the data used for the chart
-       *
-       * @attribute data
-       * @type array
-       */
-      data: {
-        value: [],
-        reflect: true
-      },
-
-      /**
-       * The `details` attribute will show or hide
-       * the chart hover-details
-       *
-       * @attribute details
-       * @type bool
-       * @default true
-       */
-      details: false,
-
-      /**
-       * The `legend` attribute will show or hide
-       * the chart legend
-       *
-       * @attribute legend
-       * @type bool
-       * @default false
-       */
-      legend: false,
-
-      /**
-       * The `shelf` attribute will show or hide
-       * the chart shelving
-       *
-       * @attribute shelf
-       * @type bool
-       * @default true
-       */
-      shelf: false,
-
-      /**
-       * The `x_axis` attribute will show or hide
-       * the chart shelving
-       *
-       * @attribute x_axis
-       * @type {object}
-       * @default null
-       */
-      xaxis: null,
-
-      observe: {
-        'data.*': 'dataChanged',
-        'type details legend shelf xaxis': 'setup'
-      },
-
-      /**
-       * The `setup` method takes care of preparing the chart and
-       * configuring it with all the attributes applied.
-       *
-       * @method setup
-       * @return {Object} Returns undefined.
-       */
-      setup: function(){
-        if(this.data){
-          if(!this.chart){
-            this.chart = new Rickshaw.Graph( {
-              element: this.$.chartEl,
-              renderer: this.type,
-              width:  this.width || this.$.chartEl.clientWidth || 450,
-              height:  this.height || this.$.chartEl.clientHeight || 300,
-              series: this.data
-            });
-
-            // var smoother = new Rickshaw.Graph.Smoother( {
-            //   graph: this.chart,
-            //   element: this.$.chartEl
-            // } );
-
-            this.chart.render();
-          }
-
-          if(this.type){
-            this.chart.configure({
-              renderer: this.type
-            });
-          }
-
-          if(this.details){
-            this.hoverDetail = new Rickshaw.Graph.HoverDetail( {
-              graph: this.chart
-            });
-          }
-
-          if(this.legend){
-            this.legendEl = new Rickshaw.Graph.Legend( {
-              graph: this.chart,
-              element: this.$.legend
-            });
-          }
-
-          if(this.shelf){
-            this.shelvingEl = new Rickshaw.Graph.Behavior.Series.Toggle( {
-              graph: this.chart,
-              legend: this.legendEl
-            } );
-          }
-
-          if(this.xaxis){
-
-            if(this.xaxis == 'time'){
-              this.xAxis = new Rickshaw.Graph.Axis.Time( { graph: this.chart } );
-            } else {
-              this.xAxis =  new Rickshaw.Graph.Axis.X( merge({
-                graph: this.chart,
-                element: this.$.x_axis,
-              }), JSON.parse(this.xaxis) );
-            }
-          }
-
-          this.chart.update();
+      ready: function(){
+        this.series = [];
+        this.chart = null;
+        if(this.responsive){
+          window.addEventListener('resize', this.updateSize.bind(this));
         }
       },
 
-      buildData: function(){
+      domReady: function(){
+        this.async(this.updateDataSets.bind(this));
       },
 
-      dataChanged: function(){
-        console.log(arguments)
-        console.log('data changed');
-        console.log(this.data);
-        this.async(this.chart.update.bind(this.chart));
+      setup: function(){
+        if(!this.chart){
+          this.chart = new Rickshaw.Graph({
+            element: this.$.chartEl,
+            width: this.responsive ? this.clientWidth : (this.width || 400),
+            height: this.responsive ? this.clientHeight : (this.height || 350),
+            renderer: this.type || 'stack',
+            series: this.series
+          });
+        } else {
+          this.chart.series = this.series;
+        }
+
+        this.chart.render();
       },
 
-      updateFrameHeight: function(){
+      updateSize: function(){
         var dims = {};
-        dims.width = this.$.chartEl.clientWidth;
-        dims.height = this.$.chartEl.clientHeight;
+        dims.width = this.clientWidth;
+        dims.height = this.clientHeight;
 
         this.chart.setSize(dims);
         this.chart.update();
       },
 
-      created: function(){
-        // this.data = [];
-      },
+      updateDataSets: function(){
+        this.series = this.$.series.getDistributedNodes().array();
 
-      ready: function() {
-        // instantiate our graph!
+        this.onMutation(this, this.updateDataSets);
+
+        this.series.forEach((function(dataset, k){
+          var newData = {};
+          newData.name = dataset.name;
+          newData.color = dataset.color;
+          newData.data = dataset.data;
+          this.series[k] = newData;
+        }).bind(this))
+
+        // console.log(this.series)
         this.setup();
-        if(this.responsive){
-          window.addEventListener('resize', this.updateFrameHeight.bind(this));
-          this.async(this.updateFrameHeight.bind(this))
-        }
-
       }
-
     });
 
   </script>
 
+</polymer-element>
+
+<!--
+The `app-chart-series` element represents a series of data.
+It is used as a child of `app-chart`
+
+##### Example
+
+    <app-chart type="line">
+      <app-chart-series name="MySeries">
+        // data goes here
+      </app-chart-series>
+    </app-chart>
+
+@element app-chart-series
+@status alpha
+@homepage http://the-control-group.github.io/app-chart
+-->
+<polymer-element name="app-chart-series" attributes="name color">
+  <template>
+    <content id="dataset" select="app-chart-data"></content>
+  </template>
+  <script>
+  Polymer('app-chart-series', {
+    /**
+     * name of the series
+     *
+     * @attribute name
+     * @type String
+     * @default ''
+     */
+
+    /**
+     * color of the series
+     *
+     * @attribute color
+     * @type String
+     * @default ''
+     */
+
+    attached: function(){
+      this.async(this.updateDataSet.bind(this));
+    },
+
+    updateDataSet: function(){
+      this.data = Array.prototype.slice.call(this.$.dataset.getDistributedNodes());
+
+      this.data.forEach((function(item, k){
+        var newData = {};
+        newData.x = item.x,
+        newData.y = item.y
+        this.data[k] = newData;
+      }).bind(this))
+
+      this.onMutation(this, this.updateDataSet);
+    }
+  })
+  </script>
+</polymer-element>
+
+<!--
+The `app-chart-data` element represents a point of data.
+It is used as a child of `app-chart-series`
+
+##### Example
+
+    <app-chart type="line">
+      <app-chart-series name="MySeries">
+        <app-chart-data x="1902" y="12313141"></app-chart-data>
+      </app-chart-series>
+    </app-chart>
+
+@element app-chart-data
+@status alpha
+@homepage http://the-control-group.github.io/app-chart
+-->
+<polymer-element name="app-chart-data" attributes="x y message">
+  <script>
+  Polymer('app-chart-data', {
+    publish: {
+      /**
+       * x value for the data
+       *
+       * @attribute x
+       * @type Number
+       * @default 0
+       */
+      x: 0,
+
+      /**
+       * y value for the data
+       *
+       * @attribute y
+       * @type Number
+       * @default 0
+       */
+      y: 0,
+
+      /**
+       * message to annotate the data with.
+       *
+       * @attribute message
+       * @type String
+       * @default ''
+       */
+      message: null
+    }
+  })
+  </script>
 </polymer-element>
