--- a/demo.html
+++ b/demo.html
@@ -11,50 +11,26 @@
 <body unresolved>
 
   <p>An `app-chart` looks like this:</p>
-  <template bind="{{ data }}">
-    <app-chart xaxis="time" type="line" data="{{ graph }}" responsive>
+  <app-chart type="line" responsive>
+    <app-chart-series name="test1" color="#3498db">
+      <app-chart-data x="1910" y="92228531"></app-chart-data>
+      <app-chart-data x="1920" y="106021568"></app-chart-data>
+      <app-chart-data x="1930" y="123202660"></app-chart-data>
+      <app-chart-data x="1940" y="132165129"></app-chart-data>
+      <app-chart-data x="1950" y="151325798"></app-chart-data>
+      <app-chart-data x="1960" y="179323175"></app-chart-data>
+      <app-chart-data x="1970" y="203211926"></app-chart-data>
+    </app-chart-series>
+    <app-chart-series name="test2" color="#e67e22">
+      <app-chart-data x="1910" y="922233"></app-chart-data>
+      <app-chart-data x="1920" y="10602156"></app-chart-data>
+      <app-chart-data x="1930" y="123202"></app-chart-data>
+      <app-chart-data x="1940" y="132165129"></app-chart-data>
+      <app-chart-data x="1950" y="151325798"></app-chart-data>
+      <app-chart-data x="1960" y="179"></app-chart-data>
+      <app-chart-data x="1970" y="2032119"></app-chart-data>
+    </app-chart-series>
+  </app-chart>
 
-    </app-chart>
-  </template>
-
-  <script>
-    document.addEventListener('polymer-ready', function() {
-      // pass the info into the component
-      var t = document.querySelector('template');
-
-      var seriesData = [ [], [] ];
-      var random = new Rickshaw.Fixtures.RandomData(150);
-
-      for (var i = 0; i < 150; i++) {
-        random.addData(seriesData);
-      }
-      var palette = new Rickshaw.Color.Palette();
-
-      t.model = {
-            data: {
-              graph: [ {
-                color: palette.color(),
-                data: seriesData[0],
-                name: 'Moscow'
-              },{
-                color: palette.color(),
-                data: seriesData[1],
-                name: 'England'
-              } ]
-        }
-      }
-
-      var id = setInterval(function test(){
-        // console.log(data);
-        var el = document.querySelector('app-chart');
-        random.removeData(seriesData);
-        random.addData(seriesData);
-        el.chart.update();
-        // console.log(series);ç≥
-
-        // console.log(data);
-      }, 500)
-    });
-  </script>
 </body>
 </html>
