--- a/demo.html
+++ b/demo.html
@@ -12,23 +12,26 @@
 
   <p>An `app-chart` looks like this:</p>
   <app-chart type="line" responsive>
+    <app-chart-axis type="y"></app-chart-axis>
+    <app-chart-axis type="time"></app-chart-axis>
+
     <app-chart-series name="test1" color="#3498db">
-      <app-chart-data x="1910" y="92228531"></app-chart-data>
-      <app-chart-data x="1920" y="106021568"></app-chart-data>
-      <app-chart-data x="1930" y="123202660"></app-chart-data>
-      <app-chart-data x="1940" y="132165129"></app-chart-data>
-      <app-chart-data x="1950" y="151325798"></app-chart-data>
-      <app-chart-data x="1960" y="179323175"></app-chart-data>
-      <app-chart-data x="1970" y="203211926"></app-chart-data>
+      <app-chart-data x="-1893456000" y="25868573"></app-chart-data>
+      <app-chart-data x="-1577923200" y="29662053"></app-chart-data>
+      <app-chart-data x="-1262304000" y="34427091"></app-chart-data>
+      <app-chart-data x="-946771200" y="35976777"></app-chart-data>
+      <app-chart-data x="-631152000" y="39477986"></app-chart-data>
+      <app-chart-data x="-315619200" y="179323175"></app-chart-data>
+      <app-chart-data x="0" y="49040703"></app-chart-data>
     </app-chart-series>
     <app-chart-series name="test2" color="#e67e22">
-      <app-chart-data x="1910" y="922233"></app-chart-data>
-      <app-chart-data x="1920" y="10602156"></app-chart-data>
-      <app-chart-data x="1930" y="123202"></app-chart-data>
-      <app-chart-data x="1940" y="132165129"></app-chart-data>
-      <app-chart-data x="1950" y="151325798"></app-chart-data>
-      <app-chart-data x="1960" y="179"></app-chart-data>
-      <app-chart-data x="1970" y="2032119"></app-chart-data>
+      <app-chart-data x="-1893456000" y="7082086"></app-chart-data>
+      <app-chart-data x="-1577923200" y="9213920"></app-chart-data>
+      <app-chart-data x="-1262304000" y="12323836"></app-chart-data>
+      <app-chart-data x="-946771200" y="14379119"></app-chart-data>
+      <app-chart-data x="-631152000" y="20189962"></app-chart-data>
+      <app-chart-data x="-315619200" y="28053104"></app-chart-data>
+      <app-chart-data x="0" y="34804193"></app-chart-data>
     </app-chart-series>
   </app-chart>
 
