stable build ready for master

--- a/app-chart.html
+++ b/app-chart.html
@@ -1,4 +1,5 @@
-<link rel="import" href="chart-import.html">
+<script src='../d3/d3.js'></script>
+<script src='../rickshaw/rickshaw.js'></script>
 <link rel="import" href="../polymer/polymer.html">
 
 <!--
