--- a/chart-import.html
+++ b/chart-import.html
@@ -1,3 +1,5 @@
 <script src='../d3/d3.js'></script>
 <script src='../rickshaw/rickshaw.js'></script>
-
+<link type="text/css" rel="stylesheet" href="../rickshaw/src/css/graph.css">
+<link type="text/css" rel="stylesheet" href="../rickshaw/src/css/detail.css">
+<link type="text/css" rel="stylesheet" href="../rickshaw/src/css/legend.css">
